2016.10.17:
	- Change socket type to SOCKET and set appropriately for platform.
	- Modernize portable.[ch], change DLP_WIN32 to DLP_WIN and DLP_GLIBC2
	to DLP_WIN and re-oragnize includes.
	- Change host name resolution to use getaddrinfo() on all platforms
	except Windows.  Support is now nearly ubiquitous.  Still limited to
	IPv4 addresses.
	- Clarify licensing to be LGPLv3, include LICENSE.txt and INSTALL.

2013.210: 1.6
	- dl_position(): return 0 when packet was not found.  Differentiates
	between successful request (but no match) and function error.
	Previously this function returned either a positive packet ID value
	or -1, where -1 was returned when packet was not found.
	Fixes from Doug Neuhauser:
	- dl_position(): allow specification of LIBDALI_POSITION_EARLIEST and
	LIBDALI_POSITION_LATEST in parameter sanity check.  Oops.
	- dl_disconnect(): continue shutdown when socket value is 0.

2011.262: 1.5
	- Add '_ld' suffix to declaration of pivotal_gmtime_r_stamp in
	timeutils.c to avoid conflicts with other libraries.  Thanks to Doug
	Neuhauser for the tip.

2011.004: 1.4
	- Correct return code for dl_position() for errors.
	- Increase verbosity level for debugging message in dl_write().

2011.003: 1.3
	- Add support to dl_position() to set read position to earliest
	or latest packet, thanks to Doug Neuhauser for the patch.
	- Updates in connection.c from Doug Neuhauser for invalid socket
	descriptor handling.
	- Add internal dl_gmtime_r() to avoid the not thread-safe call to
	the system gmtime().  The internal version handles dates beyond year
	2038 and is 64-bit friendly.
	- Rework/casting of printing/scanning for clean 64-bit build.

2008.284: 1.2
	- Change dl_write() to return an error -1 when the server
	acknowledgement indicates there was an error.  Also print the
	server replies indicating errors at a lower verbosity level than
	acknowledgements indicating success.

2008.256: 1.1
	- DataLink protocol addition of packet end time changes, this