@@ -4,22 +4,25 @@
 #   CC : Specify the C compiler to use
 #   CFLAGS : Specify compiler options to use
 
-# GCC specific parameters
-GCC = gcc
-GCCFLAGS = -O2 -Wall
 
-LIB_OBJS = timeutils.o genutils.o strutils.o \
-           logging.o network.o statefile.o config.o \
-           portable.o connection.o
+MAJOR_VER = 1
+MINOR_VER = 7
+CURRENT_VER = $(MAJOR_VER).$(MINOR_VER)
+COMPAT_VER = $(MAJOR_VER).$(MINOR_VER)
 
-CURRENT_VER = 1.3
-COMPAT_VER = 1.3
+LIB_SRCS = timeutils.c genutils.c strutils.c \
+           logging.c network.c statefile.c config.c \
+           portable.c connection.c
+
+LIB_OBJS = $(LIB_SRCS:.c=.o)
+LIB_DOBJS = $(LIB_SRCS:.c=.lo)
 
 LIB_A = libdali.a
-LIB_SO = libdali.so.$(CURRENT_VER)
-LIB_SO_ALIAS = libdali.so
-LIB_DYN = libdali.$(CURRENT_VER).dylib
+LIB_SO_FILENAME = libdali.so
+LIB_SO_ALIAS = $(LIB_SO_FILENAME).$(MAJOR_VER)
+LIB_SO = $(LIB_SO_FILENAME).$(CURRENT_VER)
 LIB_DYN_ALIAS = libdali.dylib
+LIB_DYN = libdali.$(CURRENT_VER).dylib
 
 all: static
 
@@ -30,33 +33,36 @@ shared: $(LIB_SO)
 dynamic: $(LIB_DYN)
 
 $(LIB_A): $(LIB_OBJS)
-	ar -rcs $(LIB_A) $(LIB_OBJS)
+	rm -f $(LIB_A)
+	ar -crs $(LIB_A) $(LIB_OBJS)
 
-$(LIB_SO): $(LIB_OBJS)
-	$(CC) -shared -Wl,-soname -Wl,$(LIB_SO_ALIAS) -o $(LIB_SO) $(LIB_OBJS)
+$(LIB_SO): $(LIB_DOBJS)
+	rm -f $(LIB_SO) $(LIB_SO_ALIAS) $(LIB_SO_FILENAME)
+	$(CC) $(CFLAGS) -shared -Wl,-soname -Wl,$(LIB_SO_ALIAS) -o $(LIB_SO) $(LIB_DOBJS)
 	ln -s $(LIB_SO) $(LIB_SO_ALIAS)
+	ln -s $(LIB_SO) $(LIB_SO_FILENAME)
 
-$(LIB_DYN): $(LIB_OBJS)
-	$(CC) -dynamiclib -compatibility_version $(COMPAT_VER) -current_version $(CURRENT_VER) -install_name $(LIB_DYN_ALIAS) -o $(LIB_DYN) $(LIB_OBJS)
-	ln -s $(LIB_DYN) $(LIB_DYN_ALIAS)
-
-cc:
-	@$(MAKE) "CC=$(CC)" "CFLAGS=$(CFLAGS)"
-
-gcc:
-	@$(MAKE) "CC=$(GCC)" "CFLAGS=$(GCCFLAGS)"
-
-debug:
-	$(MAKE) "CC=$(CC)" "CFLAGS=-g $(CFLAGS)"
-
-gccdebug:
-	$(MAKE) "CC=$(GCC)" "CFLAGS=-g $(GCCFLAGS)"
+$(LIB_DYN): $(LIB_DOBJS)
+	rm -f $(LIB_DYN) $(LIB_DYN_ALIAS)
+	$(CC) $(CFLAGS) -dynamiclib -compatibility_version $(COMPAT_VER) -current_version $(CURRENT_VER) -install_name $(LIB_DYN_ALIAS) -o $(LIB_DYN) $(LIB_DOBJS)
+	ln -sf $(LIB_DYN) $(LIB_DYN_ALIAS)
 
 clean:
-	rm -f $(LIB_OBJS) $(LIB_A) $(LIB_SO) $(LIB_SO_ALIAS) $(LIB_DYN) $(LIB_DYN_ALIAS)
+	rm -f $(LIB_OBJS) $(LIB_DOBJS) $(LIB_A) $(LIB_SO) $(LIB_SO_ALIAS) \
+	      $(LIB_SO_FILENAME) $(LIB_DYN) $(LIB_DYN_ALIAS)
 
 install:
 	@echo
-	@echo "No install method, copy the library, header file, and"
+	@echo "No install method, copy the library, header files, and"
 	@echo "documentation to the preferred install location"
 	@echo
+
+.SUFFIXES: .c .o .lo
+
+# Standard object building
+.c.o:
+	$(CC) $(CFLAGS) -c $< -o $@
+
+# Standard object building for dynamic library components using -fPIC
+.c.lo:
+	$(CC) $(CFLAGS) -fPIC -c $< -o $@
